@@ -750,7 +750,14 @@
            </property>
           </widget>
          </item>
-         <item row="9" column="0">
+         <item row="7" column="0" colspan="2">
+          <widget class="QCheckBox" name="infoTooltips">
+           <property name="text">
+            <string>Show song information tooltips</string>
+           </property>
+          </widget>
+         </item>
+         <item row="8" column="0">
           <widget class="BuddyLabel" name="langLabel">
            <property name="text">
             <string>Language:</string>
@@ -760,7 +767,7 @@
            </property>
           </widget>
          </item>
-         <item row="9" column="1">
+         <item row="8" column="1">
           <widget class="QComboBox" name="lang"/>
          </item>
         </layout>
